# hive

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  TODO.md  design.md  hive_build_backend.py  iteration.md  mission.md  pyproject.toml
.claude/: launch.json
acceptance/: build-verify-land-policy.md  clarification-attention-queue.md  decision-provenance-and-authority.md  finish-iteration.md  github-issues-workstream-run.md  intake-before-planning.md  launchpad-directive-routing.md  local-managed-control-plane.md  runner-capacity-probe.md  testing-artifact-links.md  testing-capability-probes.md  testing-episode-cancel-ui.md  testing-episode-from-acceptance.md  testing-real-github-issues.md  testing-refresh-completes.md
deploy/: Dockerfile  ci-autofix.github-workflow.yml  compose.yaml  create_runner_vm.sh  create_vm.sh  install_android_env.sh  install_mac_runner.sh  mac_menubar.sh  mac_runner.sh  push.sh  runner_vm_startup.sh  vm.sh  vm_startup.sh
dev_notes/: agent_streaming.md
hive/: _version_fallback.py  agent_probe.py  agent_results.py  api.py  auth.py  backends.py  blobstore.py  cli.py  config.py  config_file.py  critique.py  escalation.py  github_repos.py  issues.py  local_runner.py  models.py  orchestrator.py  preflight.py  prompts.py  runner.py  specrepo.py  storage.py  store.py  supervisor.py  task_results.py  testing.py  version.py
input-log/: 2026-06-23-intake.md
scripts/: lab_chief.py  laptop_runner.sh  smoke_orchestrator.py  spec_critique.py
tests/: test_agent_choice.py  test_agent_results.py  test_agents_run.py  test_allowances.py  test_api_e2e.py  test_auth.py  test_cached_store.py  test_capacity.py  test_chief_roster.py  test_ci.py  test_cli.py  test_critique.py  test_dark_machines.py  test_decisions.py  test_demos.py  test_llm.py  (+34 more)
(+189 files in other folders)
