[project]
name = "hive"
version = "0.1.0"
description = "Continuous autonomous software development: control plane + runner"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "google-cloud-firestore>=2.19",
    "google-cloud-storage>=2.18",
    "google-genai>=1.0",
    "httpx>=0.27",
    "kodo-agent>=0.5.0",
]

[project.scripts]
hive = "hive.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hive"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
