[project]
name = "hive"
dynamic = ["version"]
description = "Continuous autonomous software development: chief + runner"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "google-cloud-firestore>=2.19",
    "google-cloud-storage>=2.18",
    "google-genai>=1.0",
    "httpx>=0.27",
    "kodo-agent>=0.5.1",
]

[project.optional-dependencies]
# The macOS menu bar control (hive.runner.menubar); Mac runner installs only.
mac = ["rumps>=0.4 ; sys_platform == 'darwin'"]

[project.scripts]
hive = "hive.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hive_build_backend"
backend-path = ["."]

[tool.hatch.version]
path = "hive/_version_fallback.py"

[tool.hatch.build.targets.wheel]
packages = ["hive"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
